--- a/link.html
+++ b/link.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello!</title>
+		<title>Link</title>
 	</head>
 	<body>
-		Hello, World!
+		<a href="image.html">Click Here</a>
 	</body>
 </html>
